# pdfiuh

./: .gitignore  Cargo.toml  Cargo.toml.append  PROMPT_ARCHITETTURA_WEB.md  README.md  benchmark.cjs  build_errors.txt  build_log.txt  clean_main.py  fix_main_bus.py  fix_read_aloud.py  fix_search.py  fix_search_logic.py  fix_sidebar.py  fix_sidebar_annotations.py  fix_sticky_notes.py  fix_syntax.py  fix_syntax2.py  fix_syntax3.py  fix_toolbar_search.py  fix_viewer_annotations.py  fix_viewer_bus.py  fix_worker_render.py  index.html  install_log.txt  package-lock.json  package.json  pdf-reader-pro.html  restore_viewer.py  test-gen-pdf.cjs  test_log.txt  test_ui.py  tsconfig.json  update_worker.py  vite.config.ts  write_viewer_part.py
.github/workflows/: ci.yml  deploy.yml
benchmark/: find_highlight_bench.ts
core/: Cargo.toml
core/benches/: memory_profile.rs
core/src/: annotations.rs  wasm.rs
desktop/ffi/: Cargo.toml
desktop/ui/: Cargo.toml  build.rs
desktop/ui/ui/: main.slint
docs/: CHANGELOG.md  PROMPT_ARCHITETTURA_WEB.md  TECHNICAL_SPEC.md
pdfiuh-core/: Cargo.toml  README_MASTER.md
pdfiuh-core/benches/: memory_profile.rs
pdfiuh-core/pdfiuh-core/: Cargo.toml
pdfiuh-core/pdfiuh-core/src/: error.rs  lib.rs
pdfiuh-core/pdfiuh-core/tests/: integration.rs
pdfiuh-core/pdfiuh-ui/: Cargo.toml
pdfiuh-core/pdfiuh-ui/src/: main.rs
pdfiuh-core/src/: annotations.rs  error.rs  render.rs  wasm.rs
pdfiuh-core/tests/: integration.rs
pdfiuh-ffi/: Cargo.toml  build.rs
pdfiuh-ffi/src/: lib.rs
pdfiuh-ui/: Cargo.toml
pdfiuh-ui/src/: main.rs
pdfiuh-ui/ui/: main.slint
pdfiuh-web/: index.html
pdfiuh-web/src/: main.js
pdfiuh/scripts/: generate_assets.py  package_release.py
public/: manifest.webmanifest  sw.js
scripts/: final_package.py  forge_safe_release.py
src/: App.svelte  main.ts  vite-env.d.ts
src/annotations/: engine.ts  export.ts  storage.ts  svg-layer.ts
src/core/: annotation-export.ts  annotation-store.ts  device-profile.ts  event-bus.ts  pdf-export.ts  pdf-loader.ts  worker.ts
src/engine/: device-profile.ts  pdf-worker.ts
src/state/: store.ts
src/stores/: annotations.store.ts  pdf.store.ts  viewer.store.ts
src/styles/: global.css  themes.css
tests/: annotation-store.test.ts  device-profile.test.ts  event-bus.test.ts  export-pdf.test.ts  store.test.ts  xfdf-export.test.ts
wasm-pack-v0.12.1-x86_64-unknown-linux-musl/: wasm-pack.stamp
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
(+25 files in other folders)
