[package]
name = "pdfiuh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
bincode = "1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc.workspace = true
pdfiuh-ffi = { path = "../desktop/ffi" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "memory_profile"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = ["console", "CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"]
