[package]
name = "pdfiuh-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "pdfiuh"
path = "src/main.rs"

[dependencies]
pdfiuh-core = { path = "../../core" }
pdfiuh-ffi = { path = "../ffi" }
slint.workspace = true
anyhow.workspace = true

[build-dependencies]
slint-build = { version = "1.9" }
winres = "0.1"
