[package]
name = "pdfiuh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
mimalloc.workspace = true
bincode = "1.3"
pdfiuh-ffi = { path = "../pdfiuh-ffi" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "memory_profile"
harness = false
