[package]
name = "pdfiuh-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pdfiuh-core = { path = "../pdfiuh-core" }
pdfiuh-ffi = { path = "../pdfiuh-ffi" }
slint.workspace = true
anyhow.workspace = true

[build-dependencies]
slint-build = { version = "1.9" }
